@@ -51,9 +51,7 @@ echo "running JMH with args: $@"
 # -XX:+UnlockExperimentalVMOptions -XX:G1NewSizePercent=20  # and this note: Prevents G1 undermining young gen, which otherwise causes a cascade of issues
 #                                                            MRM: I've also seen 15 claimed as a sweet spot.
 
-# -XX:-UseBiasedLocking - should be unreflective in recent JVMs and removed in the latest.
-
-jvmArgs="-jvmArgs -Djmh.shutdownTimeout=5 -jvmArgs -Djmh.shutdownTimeout.step=3 -jvmArgs -Djava.security.egd=file:/dev/./urandom  -jvmArgs -XX:-UseBiasedLocking -jvmArgs -XX:+UnlockDiagnosticVMOptions -jvmArgs -XX:+DebugNonSafepoints -jvmArgs --add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+jvmArgs="-jvmArgs -Djmh.shutdownTimeout=5 -jvmArgs -Djmh.shutdownTimeout.step=3 -jvmArgs -Djava.security.egd=file:/dev/./urandom -jvmArgs -XX:+UnlockDiagnosticVMOptions -jvmArgs -XX:+DebugNonSafepoints -jvmArgs --add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
 gcArgs="-jvmArgs -XX:+UseG1GC -jvmArgs -XX:+ParallelRefProcEnabled"
 
 # -jvmArgs -Dlog4j2.debug 
